  * Add new dpkg --validate-<thing> commands to validate the syntax of
    various <thing>s, where the current list is «pkgname», «trigname»,
    «archname» and «version».
  * Use the new dpkg --validate-version command in dpkg-maintscript-helper,
    instead of abusing the --compare-versions command to perform version
    validation. Closes: #844701
  * Perl modules:
    - Whitelist DPKG_GENSYMBOLS_CHECK_LEVEL, DPKG_ROOT, DPKG_ADMINDIR and
      DPKG_DATADIR environment variables in Dpkg::Build::Info.
  * Documentation:
    - State the current working directory used when running dpkg-buildpackage
      hooks.
    - Add a new ENVIRONMENT section to dpkg-gensymbols(1) and document
      DPKG_GENSYMBOLS_CHECK_LEVEL there.
    - Fix bogus description of --force-confmiss in dpkg(1). Regression
      introduced in 1.16.4. Reported by Sven Joachim <svenjoac@gmx.de>.
      Closes: #846395
    - Update dpkg-parsechangelog parser options. The options specific to
      the changelog parser program did not get updated when the parser got
      switched to be a perl module. Missed in dpkg 1.18.8.
  * Build system:
    - Enable compression libs also in automatic check mode in configure.
    - Honor DPKG_DATADIR again in the installed Dpkg modules. This was an
      explicit public interface, documented in the man page.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Wed, 16 Nov 2016 05:16:45 +0100

dpkg (1.18.15) unstable; urgency=medium

  [ Guillem Jover ]
  * Improve PIE flags support:
    - Do not enable PIE when linking static programs. glibc-based systems
      do not support this combination and produce very bogus output.
      Proposed by Szabolcs Nagy <nsz@port70.net>. Closes: #843714
  * On source builds add 'source' to the Architecture field in the
    .buildinfo file in dpkg-genbuildinfo.
  * Add new Build-Date field to .buildinfo files.